Bug 457298 - clicking up too many times shows a white 0B circle
Summary: clicking up too many times shows a white 0B circle
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (show other bugs)
Version: 22.04.1
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-30 13:12 UTC by Danie de Jager
Modified: 2022-08-06 19:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
screenshot (13.27 KB, image/png)
2022-07-30 13:12 UTC, Danie de Jager
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Danie de Jager 2022-07-30 13:12:12 UTC
Created attachment 150999 [details]
screenshot

when browsing a drive on the windows store version - 22.04.1. It is possible to keep pressing up until a white circle is shown with 0B printed in the centre. The mount point  at that point changed to \


STEPS TO REPRODUCE
1. Scan C: drive 
2. press up.
3. Shows a white circle mount point \
4. When you click back, Filelight needs to rescan the drive is just completed scanning.

OBSERVED RESULT
 a white circle with 0B printed in the centre

EXPECTED RESULT
empty circle and mount point \ should not be displayed on Windows. At least not do a rescan when going back.

SOFTWARE/OS VERSIONS
Windows: 10 21H2
Comment 1 Harald Sitter 2022-08-01 08:57:10 UTC
Odd to say the least.
Comment 2 Harald Sitter 2022-08-04 06:09:41 UTC
Git commit eb1dfd90c2988ecf125176ae3c6ebe57016c7b40 by Harald Sitter.
Committed on 04/08/2022 at 06:09.
Pushed by sitter into branch 'master'.

don't go to root on windows

conceptually it may mean the computer view, in practise for us it means
nothing and fails to open. don't go beyond the current drive in the url

M  +8    -1    src/mainContext.cpp

https://invent.kde.org/utilities/filelight/commit/eb1dfd90c2988ecf125176ae3c6ebe57016c7b40
Comment 3 Harald Sitter 2022-08-06 19:44:39 UTC
Git commit 690221d8e0e2c32a055286588ecd771c21bf7aef by Harald Sitter.
Committed on 06/08/2022 at 19:44.
Pushed by sitter into branch 'release/22.08'.

don't go to root on windows

conceptually it may mean the computer view, in practise for us it means
nothing and fails to open. don't go beyond the current drive in the url

M  +8    -1    src/mainContext.cpp

https://invent.kde.org/utilities/filelight/commit/690221d8e0e2c32a055286588ecd771c21bf7aef