don't go to root on windows

conceptually it may mean the computer view, in practise for us it means
nothing and fails to open. don't go beyond the current drive in the url

BUG: 457298